# streamlit-nba

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NBA.py  README.md  app.py  compile_model.py  nba.txt  player_stats.txt  pyproject.toml  requirements-dev.txt  requirements.txt  roster.txt  snowflake_nba.csv  winner.keras
.claude/: skill-runs.json
.claude/skills/pipeline/: planner.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
away_team_model/: saved_model.pb
away_team_model/variables/: variables.data-00000-of-00001  variables.index
docs/: project-roadmap.md
docs/plans/2026-03-25-audit-streamlit-nba/: Phase-0.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md  README.md  doc-audit.md  eval.md  feedback.md  health-audit.md
home_team_model/: keras_metadata.pb
home_team_model/variables/: variables.data-00000-of-00001  variables.index
my_model/: saved_model.pb
my_model/variables/: variables.data-00000-of-00001  variables.index
pages/: 1_home_team.py  2_play_game.py
scripts/: compile_model.py
src/: __init__.py  config.py
src/database/: __init__.py  connection.py  queries.py
src/ml/: __init__.py  model.py
src/models/: __init__.py  player.py
src/state/: __init__.py  session.py
src/utils/: __init__.py  html.py
src/validation/: __init__.py  inputs.py
tests/: __init__.py  conftest.py  test_database.py  test_ml.py  test_models.py  test_state.py  test_utils.py  test_validation.py
winner_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
winner_model/variables/: variables.data-00000-of-00001  variables.index
